--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "removeComments": true,
     "resolveJsonModule": true,
     "sourceMap": true,
