--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist node_modules/.vite",
-    "postinstall": "chmod +x node_modules/.bin/vite"
+    "clean": "rm -rf dist node_modules/.vite"
   },
   "dependencies": {
+    "@fhevm/mock-utils": "0.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -36,23 +36,25 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.8",
+    "@types/recharts": "^1.8.29",
+    "@zama-fhe/relayer-sdk": "^0.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
+    "framer-motion": "^12.23.26",
+    "idb": "^8.0.3",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.6.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.39.0",
     "wagmi": "^2.19.3",
-    "zod": "^3.25.76",
-    "@zama-fhe/relayer-sdk": "^0.2.0",
-    "@fhevm/mock-utils": "0.1.0",
-    "ethers": "^6.15.0",
-    "idb": "^8.0.3",
-    "sonner": "^1.7.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22.16.5",
@@ -66,4 +68,3 @@
     "vite": "^5.4.19"
   }
 }
-
